[gd_scene load_steps=2 format=2]

[ext_resource path="res://actors/typewriter/Typewriter.gd" type="Script" id=1]

[node name="Typewriter" type="Label"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -129.0
margin_top = -48.0
margin_right = -897.0
margin_bottom = -548.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = true
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
align = 1
autowrap = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
script = ExtResource( 1 )
_sections_unfolded = [ "Rect" ]

[node name="TypeTimer" type="Timer" parent="." index="1"]

process_mode = 1
wait_time = 0.05
one_shot = true
autostart = false

[node name="DestructionTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="timeout" from="DestructionTimer" to="." method="_on_DestructionTimer_timeout"]


